<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Register"
    android:padding="16dp">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textStyle="bold"
        android:textSize="34sp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/imageViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/header"
        android:layout_marginTop="-100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

     <ImageView
         android:id="@+id/imageViewFooter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/header"
         android:layout_marginBottom="-110dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/imageViewFooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHeader"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="18dp"
        app:cardBackgroundColor="@color/trans"
        app:layout_constraintTop_toBottomOf="@id/imageViewHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageViewFooter">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/name_hint"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEmail"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/password_hint"
            android:layout_marginTop="16dp"
            android:inputType="textPassword" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:layout_below="@id/editTextPassword"
                android:layout_marginTop="16dp"
                android:text="@string/register_button_text" />
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextPassword"
                android:backgroundTint="@color/green"
                android:layout_marginTop="16dp"
                android:layout_marginStart="180dp"
                android:text="@string/login_button_text" />

    </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>




</androidx.constraintlayout.widget.ConstraintLayout>